Various changes to fix overscrolling on mobile hiding the header when reaching the top of the page.

--- a/style.css
+++ b/style.css
@@ -84,12 +84,16 @@
 	}
 }
 
-
+html, body {
+	position: fixed;
+	overflow: hidden;
+}
 
 body {
 	font-family: 'fontin-bold';
 	color: white;
-	padding: 20px;
+	margin: 0;
+	padding: 0;
 	padding: env(safe-area-inset);
 	background-color: #222;
 	letter-spacing: 0.02em;
@@ -99,6 +103,13 @@ body {
 	  -moz-user-select: none; /* Firefox */
 	   -ms-user-select: none; /* Internet Explorer/Edge */
 		user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
+.mainWrapper {
+	width: 100vw;
+	height: 100vh;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch; /* enables “momentum” (smooth) scrolling */
 }
 
 #loader {
@@ -722,13 +733,13 @@ noscript {
 	text-align: center;
 }
 
-.rarityLabel:before {
+.rarityLabel:after {
 	content: '';
-	position: absolute;
+	position: relative;
 	border-width: 5px 6px 0 6px;
 	height: 0px;
-	margin-top: 107px;
-	left: 49.5%;
+	padding-top: 36px;
+	margin-left: calc(50% - 6px);
 	border-color: white transparent transparent transparent;
 	border-style: solid;
 }
@@ -771,9 +782,9 @@ noscript {
 	opacity: 0.5;
 }
 
-.itemContainer .inactiveTitle:before {
-	margin-top: 102px !important;
-	transform: rotate(180deg);
+.itemContainer .inactiveTitle:after {
+	border-color: white transparent white transparent;
+	
 }
 
 .inactive:not(.showMobile) {
@@ -796,6 +807,7 @@ noscript {
 }
 
 .listItem {
+	position: relative;
 	background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://www.pathofexile.com/image/shop/deal-background-large.png');
 	background-position: -5px -5px;
 	min-width: 281px;
